# MLLMProject

./: .gitignore  BACKEND_PROGRESS_AND_INTEGRATION_TASKS.md  DEVELOPMENT_LOG.md  README.md  app.py  design-qa.md  main.py  pyproject.toml  当前进展.md
Report/Beamer/sysu-beamer-template/: main.tex
Report/Proposal/sysu-thesis/: main.tex  reference.bib  sysusetup.tex  sysuthesis.cls
data/eval/: sample_questions.json
data/eval/results/: auto_details.json  auto_scores.csv  auto_summary.json  comparison_summary.csv  comparison_summary.json  mm_rag_details.json  mm_rag_scores.csv  mm_rag_summary.json  real_mm_rag_full_summary.json  text_rag_details.json  (+2 more)
docs/: API_DESIGN.md  BACKEND_PROGRESS_AND_INTEGRATION_TASKS.md  FRONTEND_API_CONTRACT.md  FRONTEND_BACKEND_HANDOFF.md  PIPELINE_IMPROVEMENT_PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: build_index.py  demo_query.py  run_benchmark_eval.py  run_eval.py
src/mllmproject/: __init__.py  answer.py  answer_extraction.py  api.py  chart_preprocess.py  chunking.py  embeddings.py  engine.py  evaluation.py  index.py  ingest.py  io_utils.py  metrics.py  model_interfaces.py  model_stack.py  models.py  multimodal.py  pdf.py  pipeline.py  real_models.py  router.py  schemas.py  service.py  text_baseline.py  text_utils.py  vision_regions.py
tests/: test_api.py  test_benchmark_eval.py  test_evaluation_framework.py  test_model_adapters.py  test_multimodal_components.py  test_text_baseline.py
tests/integration/: test_qwen3_vl_real.py
(+185 files in other folders)
