[project]
name = "mllmproject"
version = "0.1.0"
description = "Text-first and mock multimodal document QA demo for an MLLM course project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=4.44.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
real = [
    "accelerate>=0.34.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "transformers>=4.57.0",
]
benchmarks = [
    "datasets>=2.20.0",
    "easyocr>=1.7.2",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
